--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2244,7 +2244,7 @@ input, select, textarea {
 /* Intro */
 
 	#intro {
-		background: url("images/overlay.png"), url("../../images/182628.jpg");
+		background: url("images/overlay.png"), url("../../images/2022.jpg");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, bottom center;
@@ -2311,3 +2311,9 @@ input, select, textarea {
 			}
 
 		}
+
+		.icon-brands a:hover {
+
+			color: #b9babb;
+			}
+		
