--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1886,6 +1886,22 @@ input, select, textarea {
 				line-height: 2.5em;
 			}
 
+
+
+			#one {
+				background-size: 20%;
+			}
+
+
+
+
+			 #source {
+
+				display: none;
+			}
+
+
+
 				#header h1 {
 					text-align: center;
 					position: relative;
@@ -1897,10 +1913,12 @@ input, select, textarea {
 
 					#header h1 a {
 						font-size: 1em;
+						display: none;
 					}
 
 				#header nav {
 					display: none;
+
 				}
 
 		}
@@ -2254,7 +2272,7 @@ input, select, textarea {
 /* One */
 
 	#one {
-		
+		background: url("images/overlay.png"), url("../../images/beach.jpg");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
@@ -2317,3 +2335,27 @@ input, select, textarea {
 			color: #b9babb;
 			}
 		
+
+
+		/* Grow */
+.hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.3s;
+    transition-property: transform;
+}
+
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+    transform: scale(1.1);
+}
+
+
+#illustration {
+	float: left;
+}
