--- a/css/main.css
+++ b/css/main.css
@@ -1229,7 +1229,7 @@ input, select, textarea {
 
 /* Poptrox */
 
-	.poptrox-popup {
+	/* .poptrox-popup {
 		-moz-box-sizing: content-box;
 		-webkit-box-sizing: content-box;
 		-ms-box-sizing: content-box;
@@ -1414,7 +1414,7 @@ input, select, textarea {
 				opacity: 0.65;
 			}
 
-		}
+		} */
 
 /* Gallery */
 
